# resdep

./: .gitignore  README.md  alignBLMtoFillPattern.py  calc_res_condition.py  drive_betatron.py  epicsBLMs.py  epicsScrapers.py  liberaComms.py  plotdata.py  plotdata_betatron.py  pyproject.toml  rawLossesToFillPattern.py  resdep.py  resdep_ops.py  resdep_with_epicsBLMs.py  timeAlignment.py  tunes.py
config/BLM_defaults/: README.txt  init_Vgc.json  init_adc_counter_window_2.json  init_att.json
config/BLM_defaults/2025-10-24/2025-10-24_14h37m24s/: init_adc_counter_offset_1.json  init_decay_Vgc.json  init_decay_att.json
config/resdepGUI/: settings_pane.json
resdep/: _calculations.py  _fitting.py  _plotting.py  _progressBars.py  epicsBLMs.py  epicsBPMs.py  experiment.py  resdepGUI.py  simpleGUI.py
scripts/: alignBLMtoFillPattern.py  plotdata.py  rawLossesToFillPattern.py  resdepScript.py
